# offshoot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  deps.cmake  internal.cmake
src/: internal.cmake  main.cpp
src/OF/: OF.cmake  README
src/commands/: Command.cpp  Command.h  ListCommand.h
src/offshoot/: offshoot.cmake
src/offshoot/commands/: Command.cpp  Command.h  ListCommand.cpp  ListCommand.h  MainCommand.cpp  MainCommand.h
src/templates/: Template.cpp  Template.hpp
tests/: tests.cmake
tests/src/: main.cpp  test_internal.cmake
tests/src/mocks/: CmdLineMock.h  CommandMock.h
tests/src/offshoot/commands/: Command_test.cpp
